objects/Products__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Units__c</fullName>
        <label>No.Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routers</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Virtualization</fullName>
                </value>
                <value>
                    <fullName>Mission Critical Apps</fullName>
                </value>
                <value>
                    <fullName>Networks</fullName>
                </value>
                <value>
                    <fullName>Switches</fullName>
                </value>
                <value>
                    <fullName>Access Points</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>MFP</fullName>
                </value>
                <value>
                    <fullName>Scanners</fullName>
                </value>
                <value>
                    <fullName>Virtual Server</fullName>
                </value>
                <value>
                    <fullName>Physical Server</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refresh_Cycle__c</fullName>
        <inlineHelpText>Refresh Cycle - How often customer refresh/upgrades, enter In months</inlineHelpText>
        <label>Refresh Cycle [In Months]</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Products</label>
    <nameField>
        <label>Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Tech</fullName>
        <active>true</active>
        <label>Tech</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>